@@ -51,6 +51,7 @@
     mixers, with ability to type own command as well.
 * Fixed crash on action on task window which was deleted while task menu
     is still opened.
+* Fixed "dynamic" panel width allocation.
 
 0.8.2
 -------------------------------------------------------------------------
